src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
  
input[type=number] {
  -moz-appearance: textfield;
}

.trade-label {
  width: 90%;
  background: rgba(255, 255, 255, 0.05);
  border-radius: 2px;
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
}

.trade-label:hover, .trade-label:focus-within {
  outline: 1px solid rgba(255, 255, 255, 0.3);
}

.trade-input {
  outline: none;
  background-color: transparent;
}

